--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "start": "node app.js",
-    "heroku-postbuild": "cd chatbot-ui && npm install --force && npm run build"
+    "heroku-postbuild": "cd chatbot-ui && npm install --force && npm start"
   },
   "repository": {
     "type": "git",
